<resources>
    <string name="app_name">Calculator_1</string>
    <string name="edit_text">0</string>
    <string name="clear">AC</string>
    <string name="edit_0">0</string>
    <string name="power">^</string>
    <string name="percent">%</string>
    <string name="Seven">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mull">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
</resources>