<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="34pt"
        android:gravity="end|center"
        android:inputType="number"
        android:text="@string/edit_0"
        android:autofillHints="False"
        tools:ignore="LabelFor,UsingOnClickInXml" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                android:id="@+id/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50pt"
                android:layout_height="42pt"

                android:layout_margin="2pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-thin"

                android:gravity="clip_horizontal|center|clip_vertical"
                android:onClick="clear_content"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:backgroundTint="#9C9696"
                app:iconTint="#101010"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button

                android:id="@+id/change_sign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-condensed"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:onClick="operation"
                android:text="@string/power"
                android:textColor="#121111"
                android:textSize="34sp"
                app:backgroundTint="#9C9696"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button

                android:id="@+id/percentage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40pt"
                android:layout_height="42pt"
                android:layout_margin="2pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-medium"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:onClick="percentage"
                android:text="@string/percent"
                android:textColor="#121111"
                android:textSize="34sp"
                app:backgroundTint="#9C9696"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button

                android:id="@+id/divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="55pt"
                android:layout_height="42pt"
                android:layout_margin="4pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-medium"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:onClick="operation"
                android:text="÷"
                android:textColor="#FBFAFA"
                android:textSize="48sp"
                app:backgroundTint="#EF9208"
                tools:ignore="UsingOnClickInXml">

            </Button>
        </TableRow>
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_7"
                android:layout_width="50pt"
                android:layout_height="42pt"

                android:layout_margin="2pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:onClick="activity"

                android:paddingTop="10dp"

                android:paddingBottom="10dp"
                android:text="@string/Seven"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_8"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="@string/_8"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_9"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="@string/_9"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_mul"
                android:layout_width="55pt"
                android:layout_height="42pt"
                android:layout_margin="4pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="operation"
                android:text="@string/mull"
                android:textSize="48sp"
                app:backgroundTint="#EF9208"
                tools:ignore="UsingOnClickInXml">

            </Button>
        </TableRow>
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_4"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="2pt"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="@string/_4"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_5"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="@string/_5"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_6"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="6"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_sub"
                android:layout_width="55pt"
                android:layout_height="42pt"
                android:layout_margin="4pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="operation"
                android:text="-"
                android:textSize="48sp"
                app:backgroundTint="#EF9208"
                tools:ignore="UsingOnClickInXml">

            </Button>
        </TableRow>
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_1"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="2pt"
                android:layout_marginBottom="0pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="1"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_2"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="2"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_3"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="3"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_add"
                android:layout_width="55pt"
                android:layout_height="42pt"
                android:layout_margin="4pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="operation"
                android:text="+"
                android:textSize="48sp"
                app:backgroundTint="#EF9208"
                tools:ignore="UsingOnClickInXml">

            </Button>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black">
        <TableRow
            android:layout_marginBottom="8pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_0"
                android:layout_width="200pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="10"
                android:background="@drawable/rectangle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="0"
                android:textSize="34sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="50pt"
                android:layout_height="42pt"
                android:layout_margin="3pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:gravity="center"
                android:onClick="activity"
                android:text="."
                android:textSize="48sp"
                app:backgroundTint="#373333"
                tools:ignore="UsingOnClickInXml">

            </Button>

            <Button
                android:id="@+id/button_equal"
                android:layout_width="55pt"
                android:layout_height="42pt"
                android:layout_margin="4pt"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#474242"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="click_equal"
                android:text="="
                android:textSize="48sp"
                app:backgroundTint="#EF9208"
                tools:ignore="UsingOnClickInXml">

            </Button>
        </TableRow>
    </LinearLayout>
</TableLayout>




